--- a/app/templates/sharing.html
+++ b/app/templates/sharing.html
@@ -2,12 +2,13 @@
 
 {% block content %}
 
-<h1 class="header-style-page">About Student Kitchen:</h1>
+<div class="background-anim">
+    <h1 class="header-style-page">About Student Kitchen</h1>
 
 <p class="paragraph-style">Student Kitchen was created with the idea that cooking can be simple, easy, and accessible for any student or person in need of a thoughtful way to search/create recipes.</p>
-<h3 class="header-style-page">All Pages:</h3>
+<h3 class="header-style-page">All Pages</h3>
 <p class="paragraph-style">No matter the page you are currently on, you will have access to all navigation features of Student Kitchen.
-<h2 class="header-style-page-separate main-header">Sections:</p>
+<h2 class="header-style-page-separate main-header">Sections</p>
 <h3 class="header-style-page">Home Page</h3>
 <p class="paragraph-style">From the home page, you have access to three main buttons: The "Filter Recipes" button, the "Built-in Choices" button, and the "Create Your Own Recipe" button.
 <h3 class="header-style-page">Filter Recipes</h3>
@@ -25,6 +26,10 @@
 <p class="paragraph-style">If the user does not want a certain recipe to be displayed on the page anymore, they can click the "Delete Recipe" button, and it will remove both the appearance of the recipe information on the webpage and the actual data for it in the "SavedRecipe" database. If the user desires to have more recipes appear on the page after removing all recipes, the user will have to go back to adding more recipes from our previously mentioned search options.</p>
 <h4 class="header-style-page">Giving a Recipe a 1-5 Star Rating and Leaving Feedback</h4>
 <p class="paragraph-style">From the Saved Recipes page, you can click the "Rate This Recipe" button, and it will take you to the "Forums page", where you can give a rating 1-5, and leave a comment. Both the rating that the user gives and the feedback they entered previously will be displayed alongside the recipe information for the person they were giving a rating to. For example, the user gives a "5" star rating to a user named "John Doe" and types "This recipe was helpful!" in the textbox field. When the user presses "Submit Rating", both the field for the 5 star rating and the comment they gave will be added as fields in the "SavedRecipe" database. The basic information for the recipe gave a rating for will then displayed upon submission: Recipe Author, the name of the recipe, the cooking method they used, time required, and temperature, if any. With the basic information will now be two new fields: Rating and Feedback.</p>
+
+
+</div>
+
 
     
 
