--- a/app/templates/recipecreation.html
+++ b/app/templates/recipecreation.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="background-anim">
     <div class="form-container">
         {% if messages %}
             <div class="alert alert-success">
@@ -26,5 +27,9 @@
             <button type="submit" class="submit-btn">Submit</button>
         </form>
     </div>
+
+</div>
+
+    
 {% endblock %}
 
