--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -10,6 +10,8 @@
 
 body {
     background-color: gainsboro;
+    overflow-x:hidden;
+
 }
 
 /*#24252A */
@@ -265,8 +267,8 @@ header {
     margin-top: 2em;
     background: white;
     
-    margin-right: 2vh;
-    margin-left:2vh;
+    margin-right: 2vw;
+    margin-left:2vw;
     border-radius: 0.5em;
     box-shadow: .50em .50em 1em;
     
@@ -447,7 +449,7 @@ header {
 }
 /*Forms start*/
 .rating-css {
-    height: 250px;
+    height: 15vh;
     width: 400px;
     background: black;
     border: 4px solid rgb(210,45,0,255);
@@ -522,6 +524,7 @@ header {
     text-align: center;
     font-family: sans-serif;
     color: white;
+    padding: 2vw;
     text-shadow: 2px 2px 15px black;
 }
 
@@ -627,6 +630,7 @@ header {
 .feedback-para {
     color: white;
     font-family: sans-serif;
+   
 }
 
 .linked-labels {
@@ -691,13 +695,13 @@ header {
 
 .background-anim {
     padding-top: 10vh;
-    padding-bottom: 2vh;
+    padding-bottom: 10vh;
     background: linear-gradient(45deg, rgb(210,45,0,255), black, white);
     background-size: 400% 400%;
     animation: gradient-animation 15s ease infinite;
 }
 
-/* Gradient animation keyframes */
+
 @keyframes gradient-animation {
     0% {
         background-position: 0% 50%;
@@ -719,7 +723,7 @@ header {
     animation: gradient-animation 15s ease infinite;
 }
 
-/* Gradient animation keyframes */
+
 @keyframes gradient-animation {
     0% {
         background-position: 0% 50%;
@@ -729,5 +733,414 @@ header {
     }
     100% {
         background-position: 0% 50%;
+    }
+}
+
+@media only screen and (min-width: 100px) and (max-width: 375px) {
+    
+    header {
+        padding-left: 5vw;
+        margin-bottom: 1vw;
+    }
+
+    
+    .link-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    
+    .logo-properties {
+        width: 10em;
+    }
+
+    .linked-labels {
+        margin-left: 0.05vw;
+        gap: 2vh;
+        margin-bottom: 5vh
+    }
+
+    
+    .search-header {
+        margin-top: 2em;
+        margin-left: 2em;
+        margin-right: 2em;
+    }
+
+    
+    .pill, .form-buttons, .form-buttons-filter {
+        padding: 0.5em 1em;
+        font-size: 12pt;
+    }
+
+    
+    .button-container {
+        flex-direction: column;
+        gap: 1em;
+    }
+
+    
+    .form-group input,
+    .form-group select,
+    .form-group textarea {
+        width: 100%;
+        font-size: 14px;
+    }
+
+    
+    .search-input {
+        width: 80vw;
+        height: 8vh;
+    }
+
+    
+    .list-form {
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+
+    .background-anim {
+        padding-bottom: 30vh;
+    }
+
+    .custom-text-area {
+        max-width: 30vw
+    }
+    
+    
+    .form-container {
+        padding: 10px;
+        width: 90%;
+    }
+
+}
+
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+    
+    header {
+        padding-left: 5vw;
+        margin-bottom: 1vw;
+    }
+
+   
+    .link-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+   
+    .logo-properties {
+        width: 16em;
+    }
+
+    .linked-labels {
+        margin-left: 0.05vw;
+        gap: 2vh;
+        margin-bottom: 5vh
+    }
+
+    
+    .search-header {
+        margin-top: 2em;
+        margin-left: 2em;
+        margin-right: 2em;
+    }
+
+    
+    .pill, .form-buttons, .form-buttons-filter {
+        padding: 0.5em 1em;
+        font-size: 12pt;
+    }
+
+    
+    .button-container {
+        flex-direction: column;
+        gap: 1em;
+    }
+
+    
+    .form-group input,
+    .form-group select,
+    .form-group textarea {
+        width: 100%;
+        font-size: 14px;
+    }
+
+    
+    .search-input {
+        width: 80vw;
+        height: 8vh;
+    }
+
+    
+    .list-form {
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+    
+    
+    .form-container {
+        padding: 10px;
+        width: 90%;
+    }
+}
+
+@media only screen and (min-width: 820px) and (max-width: 1085px) {
+    
+    header {
+        padding-left: 8vw;
+        margin-bottom: 1vw;
+    }
+
+    .linked-labels {
+        margin-left: 0.05vw;
+        gap: 15vh;
+        margin-bottom: 5vh
+    }
+
+    
+    .logo-properties {
+        width: 16em;
+    }
+
+    
+    .search-header {
+        margin-top: 2.5em;
+        margin-left: 4em;
+        margin-right: 4em;
+    }
+
+    
+    .pill, .form-buttons, .form-buttons-filter {
+        padding: 0.7em 1.5em;
+        font-size: 14pt;
+    }
+
+    .background-anim {
+        padding-bottom: 40vh;
+    }
+    
+    .search-input {
+        width: 70vw;
+    }
+
+    
+    .list-form {
+        margin-left: 10vw;
+        margin-right: 10vw;
+    }
+
+    
+    .form-container {
+        padding: 15px;
+        width: 80%;
+    }
+
+}
+
+
+@media only screen and (min-width: 375px) and (max-width: 768px) {
+    
+    header {
+        padding-left: 5vw;
+        margin-bottom: 1vw;
+    }
+
+    
+    .link-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    
+    .logo-properties {
+        width: 10em;
+    }
+
+    
+
+    .linked-labels {
+        margin-left: 0.05vw;
+        gap: 2vh;
+        margin-bottom: 5vh
+    }
+
+    
+    .search-header {
+        margin-top: 2em;
+        margin-left: 2em;
+        margin-right: 2em;
+    }
+
+    
+    .pill, .form-buttons, .form-buttons-filter {
+        padding: 0.5em 1em;
+        font-size: 12pt;
+    }
+
+    
+    .button-container {
+        flex-direction: column;
+        gap: 1em;
+    }
+
+    
+    .form-group input,
+    .form-group select,
+    .form-group textarea {
+        width: 100%;
+        font-size: 14px;
+    }
+
+    
+    .search-input {
+        width: 80vw;
+        height: 8vh;
+    }
+
+    
+    .list-form {
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+
+    .background-anim {
+        padding-bottom: 30vh;
+    }
+
+    .custom-text-area {
+        max-width: 30vw
+    }
+    
+    
+    .form-container {
+        padding: 10px;
+        width: 90%;
+    }
+
+}
+
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+    
+    header {
+        padding-left: 5vw;
+        margin-bottom: 1vw;
+    }
+
+    
+    .link-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    
+    .logo-properties {
+        width: 16em;
+    }
+
+    .linked-labels {
+        margin-left: 0.05vw;
+        gap: 2vh;
+        margin-bottom: 5vh
+    }
+
+    
+    .search-header {
+        margin-top: 2em;
+        margin-left: 2em;
+        margin-right: 2em;
+    }
+
+    
+    .pill, .form-buttons, .form-buttons-filter {
+        padding: 0.5em 1em;
+        font-size: 12pt;
+    }
+
+    
+    .button-container {
+        flex-direction: column;
+        gap: 1em;
+    }
+
+    
+    .form-group input,
+    .form-group select,
+    .form-group textarea {
+        width: 100%;
+        font-size: 14px;
+    }
+
+    
+    .search-input {
+        width: 80vw;
+        height: 8vh;
+    }
+
+    
+    .list-form {
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+    
+    
+    .form-container {
+        padding: 10px;
+        width: 90%;
+    }
+}
+
+@media only screen and (min-width: 820px) and (max-width: 1280px) {
+    
+    header {
+        padding-left: 8vw;
+        margin-bottom: 1vw;
+    }
+
+    .linked-labels {
+        margin-left: 0.05vw;
+        gap: 10vh;
+        margin-bottom: 5vh
+    }
+
+
+    .background-anim {
+        padding-bottom: 50vh;
+    }
+
+    
+    .logo-properties {
+        width: 16em;
+    }
+
+    
+    .search-header {
+        margin-top: 2.5em;
+        margin-left: 4em;
+        margin-right: 4em;
+    }
+
+    
+    .pill, .form-buttons, .form-buttons-filter {
+        padding: 0.7em 1.5em;
+        font-size: 14pt;
+    }
+
+    
+    
+    .search-input {
+        width: 70vw;
+    }
+
+    
+    .list-form {
+        margin-left: 10vw;
+        margin-right: 10vw;
+    }
+
+    
+    .form-container {
+        padding: 15px;
+        width: 80%;
     }
 }
