--- a/app/templates/forums.html
+++ b/app/templates/forums.html
@@ -1,59 +1,64 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2 class="saved-recipe-header">
-    <i class="fa-solid fa-users icon-styling"></i>
-    Recipe Forums
-</h2>
-<form method="POST" class="form-background">
-    {% csrf_token %}
+<div class="background-anim">
+    <h2 class="saved-recipe-header">
+        <i class="fa-solid fa-users icon-styling"></i>
+        Recipe Forums
+    </h2>
+    <form method="POST" class="form-background">
+        {% csrf_token %}
+        
+        <div class="expand">
+            <div class="rating-css">
+                <div class="star-icon">
+                    <input type="radio" name="rating" id="rating1" value="5" {% if recipe.rating == 5 %} checked {% endif %}>
+                    <label for="rating1" class="fa fa-star"></label>
+        
+                    <input type="radio" name="rating" id="rating2" value="4" {% if recipe.rating == 4 %} checked {% endif %}>
+                    <label for="rating2" class="fa fa-star"></label>
+        
+                    <input type="radio" name="rating" id="rating3" value="3" {% if recipe.rating == 3 %} checked {% endif %}>
+                    <label for="rating3" class="fa fa-star"></label>
+        
+                    <input type="radio" name="rating" id="rating4" value="2" {% if recipe.rating == 2 %} checked {% endif %}>
+                    <label for="rating4" class="fa fa-star"></label>
+        
+                    <input type="radio" name="rating" id="rating5" value="1" {% if recipe.rating == 1%} checked {% endif %}>
+                    <label for="rating5" class="fa fa-star"></label>
+                </div>
+            </div>
     
-    <div class="expand">
-        <div class="rating-css">
-            <div class="star-icon">
-                <input type="radio" name="rating" id="rating1" value="5" {% if recipe.rating == 5 %} checked {% endif %}>
-                <label for="rating1" class="fa fa-star"></label>
-    
-                <input type="radio" name="rating" id="rating2" value="4" {% if recipe.rating == 4 %} checked {% endif %}>
-                <label for="rating2" class="fa fa-star"></label>
-    
-                <input type="radio" name="rating" id="rating3" value="3" {% if recipe.rating == 3 %} checked {% endif %}>
-                <label for="rating3" class="fa fa-star"></label>
-    
-                <input type="radio" name="rating" id="rating4" value="2" {% if recipe.rating == 2 %} checked {% endif %}>
-                <label for="rating4" class="fa fa-star"></label>
-    
-                <input type="radio" name="rating" id="rating5" value="1" {% if recipe.rating == 1%} checked {% endif %}>
-                <label for="rating5" class="fa fa-star"></label>
+            <div class="custom-div">
+                <textarea class="custom-text-area" name="feedback" placeholder="Enter your feedback here...">{{ recipe.feedback }}</textarea>
             </div>
         </div>
-
-        <div class="custom-div">
-            <textarea class="custom-text-area" name="feedback" placeholder="Enter your feedback here...">{{ recipe.feedback }}</textarea>
+    
+        <select name="recipe_author" id="recipe_author">
+            <option value="">--Select Author of Saved Recipe--</option>
+            {% for author in recipe_authors %}
+                <option value="{{ author }}" {% if selected_author == author %} selected {% endif %}>
+                    {{ author }}
+                </option>
+            {% endfor %}
+        </select>
+    
+        <button type="submit" class="form-buttons form-buttons-filter">
+            Submit Rating and Feedback
+        </button>
+    </form>
+    
+    {% if recipe and recipe.feedback %}
+        <div class="feedback-display">
+            <h3 class="feedback-styling">Feedback for "{{ recipe.recipe_name }}":</h3>
+            <p class="feedback-para"> Rating: {{ recipe.rating }} Stars Out Of 5 </p>
+            <p class="feedback-para">User Feedback: {{ recipe.feedback }}</p>
         </div>
-    </div>
+    {% endif %}
 
-    <select name="recipe_author" id="recipe_author">
-        <option value="">--Select Author of Saved Recipe--</option>
-        {% for author in recipe_authors %}
-            <option value="{{ author }}" {% if selected_author == author %} selected {% endif %}>
-                {{ author }}
-            </option>
-        {% endfor %}
-    </select>
+</div>
 
-    <button type="submit" class="form-buttons form-buttons-filter">
-        Submit Rating and Feedback
-    </button>
-</form>
 
-{% if recipe and recipe.feedback %}
-    <div class="feedback-display">
-        <h3 class="feedback-styling">Feedback for "{{ recipe.recipe_name }}":</h3>
-        <p class="feedback-para"> Rating: {{ recipe.rating }} Stars Out Of 5 </p>
-        <p class="feedback-para">User Feedback: {{ recipe.feedback }}</p>
-    </div>
-{% endif %}
 {% endblock %}
 
 
